--- a/frontend_/package.json
+++ b/frontend_/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
-    "@material-ui/core": "4.11.4",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "dotenv": "^9.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.7",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
