--- a/backend_/package.json
+++ b/backend_/package.json
@@ -1,37 +1,19 @@
 {
-  "name": "wikipedia-forum",
+  "name": "backend_",
   "version": "1.0.0",
   "description": "",
-  "private": true,
-  "scripts": {
-    "test": "jest",
-    "start": "node ./bin/www",
-    "autostart": "nodemon ./bin/www"
-  },
-  "jest": {
-    "testEnvironment": "node"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.14.1",
-    "@types/jest": "^26.0.23",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "mongodb-memory-server": "^6.9.6"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "^4.17.1",
-    "http-errors": "~1.6.3",
-    "jade": "^1.11.0",
-    "mongoose": "^5.12.7",
-    "morgan": "~1.9.1"
-  },
   "main": "index.js",
-  "author": "Ying <yingwork34@gmail.com>",
-  "license": "MIT"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^9.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.7",
+    "nodemon": "^2.0.7"
+  }
 }
